feat: tools-indexer

--- a/tools-indexer/package.json
+++ b/tools-indexer/package.json
@@ -8,5 +8,9 @@
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "gray-matter": "^4.0.3",
+    "handlebars": "^4.7.8"
   }
 }
